--- a/src/index.css
+++ b/src/index.css
@@ -142,12 +142,12 @@
   }
   
   .sidebar {
-    @apply fixed left-0 top-0 h-full w-64 bg-white border-r border-gray-200;
+    @apply fixed left-0 top-0 h-full w-64 bg-white border-r border-gray-200 z-40;
     @apply transform transition-transform duration-300 ease-in-out z-50;
   }
   
   .sidebar-open {
-    @apply translate-x-0;
+    @apply translate-x-0 lg:translate-x-0;
   }
   
   .sidebar-closed {
