--- a/src/index.css
+++ b/src/index.css
@@ -142,26 +142,26 @@
   }
   
   .sidebar {
-    @apply fixed left-0 top-0 h-full w-64 bg-white border-r border-gray-200 z-40;
+    @apply fixed left-0 top-0 h-full bg-white border-r border-gray-200 z-40;
     @apply transform transition-transform duration-300 ease-in-out z-50;
   }
   
   .sidebar-open {
-    @apply translate-x-0 lg:translate-x-0;
+    @apply translate-x-0 lg:translate-x-0 w-64;
   }
   
   .sidebar-closed {
-    @apply -translate-x-full lg:translate-x-0;
+    @apply -translate-x-full lg:translate-x-0 lg:w-16 w-64;
   }
   
   .sidebar-item {
-    @apply flex items-center px-4 py-3 mx-3 rounded-lg;
+    @apply flex items-center px-3 py-3 mx-2 rounded-lg;
     @apply text-gray-600 hover:text-gray-900 hover:bg-gray-100;
     @apply transition-all duration-200;
   }
   
   .sidebar-item-active {
-    @apply flex items-center px-4 py-3 mx-3 rounded-lg;
+    @apply flex items-center px-3 py-3 mx-2 rounded-lg;
     @apply text-gray-900 bg-gray-100;
   }
   
